k8s_manifests/nodejs_backend_manifests/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodejs-backend
  namespace: app-2025
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/services/all"
spec:
  selector:
    app: demo-nodejs-backend
  type: ClusterIP  # Changed from NodePort to ClusterIP for use with ALB
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
